ontapi: [#57] handle isIgnoreAxiomsReadErrors when reading axioms